--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,6 @@ body {
   text-align: center;
   color: #c0c0c0;
   height: 20px;
-  box-shadow: inset 20px 0px 0px #e5e5e5, inset -20px 0px 0px #e5e5e5, inset 0px -2px 0px #d7d7d7;
   margin-top: 5px;
   margin-bottom: 10px;
   cursor: default;
@@ -75,6 +74,22 @@ body {
   padding: 10px;
   border-radius: 2px;
   box-shadow: 0px 2px 0px rgba(0,0,0,0.07);
+}
+.msg .user {
+  font-size: 14px;
+  margin: 0 0 2px 0;
+  color: #666;
+  text-align: left;
+  border-bottom: 1px solid;
+  border-color: rgba(197,197,197,0.5);
+  font-weight: 700;
+  margin-top: -2px;
+  margin-bottom: 5px;
+  transition: all 0.2s ease;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 .msg p {
   font-size: 1.8rem;
