--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -7,12 +7,13 @@ html, body
   font-family: 'Lato', sans-serif;
   margin: 0px auto;
 
-.wrap 
+.msgWrap 
   min-height: 100%
   height: auto !important
   height: 100%
   margin: 0 auto -60px
-
+  display: none
+  
 .push, .footer 
   height: 60px
 
