--- a/views/index.jade
+++ b/views/index.jade
@@ -1,19 +1,28 @@
 extends layout
 
 block content
-  .wrap
-    .container-fluid
-        h1 Welcome to the Node Chatroom
+  .container-fluid
+    h1 Welcome to the Node Chatroom
+  
+  .unameWrap
+    p Enter Your Username
+    p(id="error")
+    input(type="text" id="uname_box" class="form-control input-lg" placeholder="Write a User name here...")
+    button#create_user.btn.btn-primary.btn-lg.btn-block Chat
+
+  .msgWrap
+    .container-fluid        
+        
         ol(id='messages')
 
         .push
-  .footer
-    .container-fluid
-      .row
-        .col-xs-8.col-sm-9
-          input(type="text" id="message-box" class="form-control input-lg" placeholder="Write a message here..." rows="3")
-        .col-xs-4.col-sm-3
-          button#send-message-btn.btn.btn-primary.btn-lg.btn-block Send
+    .footer
+      .container-fluid
+        .row
+          .col-xs-8.col-sm-9
+            input(type="text" id="message-box" class="form-control input-lg" placeholder="Write a message here..." rows="3")
+          .col-xs-4.col-sm-3
+            button#send-message-btn.btn.btn-primary.btn-lg.btn-block Send
 
 block body_end
   script(type='text/javascript' src='/js/index.js')
