Chat-one2one#try1

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,8 @@ extends layout
 block content
   .container-fluid
     h1 Welcome to the Node Chatroom
-  
+    button#switch_chat-btn.btn.btn-primary.btn-block Private Chat
+
   .unameWrap
     p Enter Your Username
     p(id="error")
