--- a/views/user.jade
+++ b/views/user.jade
@@ -10,6 +10,10 @@ block content
 		p(id="error")
 		button#create_user.btn.btn-primary.btn-lg.btn-block Chat
 
+		table#chats.table.table-striped
+			thead
+				td Chats
+
 	.msgWrap
 		.container-fluid        
 
